# rnotes

./: .gitattributes  404.html  LICENSE  README.md  index.html  package.json
.github/workflows/: build-deploy.yml
archives/: index.html
assets/css/: 0.styles.53eaab09.css  0.styles.b6f582e0.css  0.styles.bf69d3cb.css  0.styles.dc542a7e.css
assets/js/: 10.13870564.js  10.5e54cb1e.js  10.6a67c880.js  10.722ee0cf.js  10.89f8345f.js  10.8b34ee69.js  10.ad8f10f3.js  10.b243d6e9.js  10.d55ac3ce.js  11.03eacd9a.js  11.0bbfde26.js  11.1ece361d.js  11.55bb5f0e.js  11.581ce63e.js  (+1396 more)
categories/: index.html
code/: 1.txt  preceive_hook.patch
code/agents/learn-cc/: .env.example  .gitignore  README.md  background.py  cc.py  compacts.py  config.py  llm_client.py  main.py  pyproject.toml  requirements.txt  skills.py  state.py  subagent.py  tasks.py  teams.py  todos.py  tools.py
code/agents/learn-cc/tests/: test_llm_client.py  test_main.py
code/bazel/basic-gazelle/cmd/: BUILD.bazel  roll.go  root.go
code/bazel/basic-gazelle/pkg/roll/:  roll_dice.go  BUILD.bazel  roll_dice_test.go
code/myapp/app/: .env  pyproject.toml
code/myapp/app/alembic/: env.py
code/myapp/app/alembic/versions/: de2a0874f9a4_add_user_table.py
code/myapp/app/app/: main.py
code/myapp/app/app/api/: deps.py
code/myapp/app/app/api/api_v1/endpoints/: users.py
code/myapp/app/app/core/: config.py
code/myapp/app/app/crud/: crud_user.py
code/myapp/app/app/schemas/: __init__.py
database/: index.html
deep-learning/: index.html
docs/: index.md
draws/: AES-256-GCM  NFS  auto-switch  k8s-net
k8s/: index.html
message-board/: index.html
one/: index.html
os/: index.html
tags/: index.html
three/: index.html
tools/: index.html
two/: index.html
utils/: baiduPush.js
深入理解分布式系统/: index.html
(+2227 files in other folders)
