[project]
name = "learn-cc"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = [
    ".zed",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    ".zed",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
