[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lvsoso <wuqize5109@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.9"}
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
tenacity = "^8.2.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
